--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "colors": "^1.3.3",
     "express": "^4.16.4",
     "nodemon": "^1.18.6"
   }
