--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "start:dev": "./node_modules/nodemon/bin/nodemon.js index.js"
+    "start:dev": "./node_modules/nodemon/bin/nodemon.js --inspect index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,8 @@
     "axios": "^0.18.0",
     "colors": "^1.3.3",
     "express": "^4.16.4",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0"
   }
 }
